# bilibili2text

./: .dockerignore  .gitignore  .prettierrc.json  AGENTS.md  Dockerfile  MANIFEST.in  README.md  audio_chunking.py  config.toml.example  context.toml  justfile  pyproject.toml  summary_presets.toml  test_format_minio_markdown.py  test_summarize.py
.claude/: settings.local.json
.github/workflows/: backend-ci.yml  frontend-ci.yml
b2t/: __init__.py  cli.py  config.py  history.py  pipeline.py  stock_status.py  summary_context.py
b2t/converter/: __init__.py  converter.py  json_to_md.py  markdown_fixer.py  markdown_formatter.py  md_remove_table.py  md_table_to_pdf.py  md_to_html.py  md_to_pdf.py  md_to_png.py  md_to_txt.py
b2t/download/: __init__.py  metadata.py  yutto.py  yutto_api.py  yutto_cli.py
b2t/monitor/: __init__.py  feishu.py  service.py
b2t/oss/: client.py
b2t/polish/: llm.py
b2t/rag/: __init__.py  chunker.py  embedder.py  indexer.py  retriever.py  store.py
b2t/storage/: __init__.py  base.py  local.py  (+3 more)
docker/: entrypoint.sh  nginx.conf.template
docs/: markdown-formatting.md
scripts/: cleanup_duplicate_minio_files.py  delete_bvid_records.py  delete_history_records.py  format_markdown.py  format_minio_markdown.py  serve_frontend_nginx.sh  test_get_png.py  test_summarize.py
tests/: test_backend_refactor_boundaries.py  test_bvid_locks.py  test_ephemeral_uploads.py  test_existing_transcriptions.py  test_fancy_html.py  test_history_metadata.py  test_history_regenerate.py  test_md_to_pdf.py  test_md_to_png.py  test_monitor_config.py  test_monitor_service.py  test_process_upload.py  test_qwen_asr.py  test_rag_config.py  test_runner_ephemeral_upload.py  test_stock_status.py  test_summary_postprocess.py  test_summary_selection.py
web-ui/: README.md
(+55 files in other folders)
